# operacionki

./: emulator.py  listener.py  update.cmd  update.sh
lab1/: CMakeLists.txt  main
lab2/: CMakeLists.txt  back.hpp  main.cpp
lab3/: CMakeLists.txt  buf.txt  buf2.txt  main.cpp  mutex.hpp  shmem.hpp
lab4/: CMakeLists.txt  emulator.cpp  listener.cpp
lab5/: CMakeLists.txt  emulator.cpp  listener.cpp  run.ps1  run.sh
lab5/web/: app.py
lab5/web/templates/: index.html
